--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="navbar">
     <header class="header">
-      <h1>MY CURRICULUM VITAE (CV)</h1>
-      <div class="nav">
-        <ul>
+        <nav>
+            <div class="logo">
+                <h1>
+                   M
+                </h1>
+               <h2>
+                   Mawe
+               </h2>
+           </div>
+            <h1>MY CURRICULUM VITAE (CV)</h1>
+            <ul>
           <li>
             <a href="#">Home</a>
           </li>
@@ -23,9 +30,8 @@
             <a href="signin.html">Sign in</a>
           </li>
         </ul>
-      </div>
+        </nav>        
     </header>
-  </div>
   <div>
     <section class="container">
         <h1>My CV</h1>
